tests/A1/tests/accept/accept_a1only/sameVarName.ul
void main(){
    int x;
    string x;

    x = 2;
    x = "hello";
}