tests/A1/tests/reject/array2.ul
void main(){
    int [4.5] x;
}